--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Droid Sans', sans-serif;
-    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+    background: #ffffff;
     color: #ffffff;
     line-height: 1.6;
 }
