--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 
 body {
     font-family: 'Droid Sans', sans-serif;
-    background: #ffffff;
-    color: #ffffff;
+    background-color: #ffffff;
     line-height: 1.6;
 }
 
