--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Droid Sans', sans-serif;
-    background-color: #ffffff;
+    background-color: #000000;
     line-height: 1.6;
 }
 
